# ecn_auv_lab

./: CMakeLists.txt  README.md  package.xml
launch/: bluerov2_launch.py  control_launch.py  layout.rviz  pids_launch.py  pose_setpoint.yaml  world_launch.py
params/: cascaded_pid.yaml  ekf.yaml
src/: gz2ekf.cpp  waypoints.cpp  waypoints.h
urdf/terrain/: terrain.xacro
